added endpoint /situations/{thing}
this endpoint returns all situations for a thing.
the name of the thing is a parameter that is in the path.
